# glamm

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
glamm/: blit_maps_shader.cpp  blit_maps_shader.hpp  draw_map_shader.cpp  draw_map_shader.hpp  frame_buffer.cpp  frame_buffer.hpp  main.cpp  map_merger.cpp  map_merger.hpp  occupancy_grid_texture_map.cpp  occupancy_grid_texture_map.hpp  pgm_io.cpp  pgm_io.hpp  render_merged_map_shader.cpp  render_merged_map_shader.hpp  shader_program.cpp  shader_program.hpp  virtual_display.cpp  virtual_display.hpp
glamm/shaders/: blit_maps.fs  blit_maps.vs  draw_map.fs  draw_map.vs  glamm.frag  glamm.vert  mapping.vs  render_merged_map.fs  render_merged_map.vs
img/: simple_overlap_prototype.pgm
maps/: chessboard_map.pgm  example_map.pgm
